--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -15,7 +15,7 @@ style="width:320px; margin:120px auto; background:#fff; padding:25px; border-rad
     <!-- ERROR MESSAGE -->
     {% if messages %}
         {% for message in messages %}
-            <p style="color:red; text-align:center; margin-bottom:10px;">
+            <p style="color:rgb(189, 13, 13); text-align:center; margin-bottom:10px;">
                 {{ message }}
             </p>
         {% endfor %}
